cabal-version: 3.0
name: cis194kr-github-io
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable cis194kr-github-io
  import: warnings
  main-is: site.hs
  build-depends:
    base ^>=4.17.2.1,
    hakyll,

  default-language: Haskell2010
